faiss ollama setup

--- a/faiss.ipynb
+++ b/faiss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "\n",
     "from langchain_core.vectorstores import VectorStoreRetriever\n",
     "\n",
-    "from langchain.chains import retrieval_qa\n",
+    "from langchain.chains import RetrievalQA\n",
     "import os"
    ]
   },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,15 +70,15 @@
    "outputs": [],
    "source": [
     "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=300,\n",
-    "    chunk_overlap=50,\n",
+    "    chunk_size=500,\n",
+    "    chunk_overlap=0,\n",
     "    length_function=len,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,19 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'source': 'computer.txt'}, page_content='processing system, using thousands of vacuum tubes.[34] In the US, John Vincent Atanasoff and Clifford E. Berry of Iowa State University developed and tested the Atanasoff–Berry Computer (ABC) in 1942,[45] the first \"automatic electronic digital computer\".[46] This design was also all-electronic and used about 300 vacuum tubes, with capacitors fixed in a mechanically rotating drum for memory.[47]'),\n",
-       " Document(metadata={'source': 'computer.txt'}, page_content='modern electronic computer.[62] As soon as the Baby had demonstrated the feasibility of its design, a project began at the university to develop it into a practically useful computer, the Manchester Mark 1.'),\n",
-       " Document(metadata={'source': 'computer.txt'}, page_content=\"In 1941, Zuse followed his earlier machine up with the Z3, the world's first working electromechanical programmable, fully automatic digital computer.[38][39] The Z3 was built with 2000 relays, implementing a 22 bit word length that operated at a clock frequency of about 5–10 Hz.[40] Program code was supplied on punched film while data could be stored in 64 words of memory or supplied from the keyboard. It was quite similar to modern machines in some respects, pioneering numerous advances such\"),\n",
-       " Document(metadata={'source': 'computer.txt'}, page_content='Laboratory and began work on developing an electronic stored-program digital computer. His 1945 report \"Proposed Electronic Calculator\" was the first specification for such a device. John von Neumann at the University of Pennsylvania also circulated his First Draft of a Report on the EDVAC in 1945.[34]')]"
+       "[Document(metadata={'source': 'computer.txt'}, page_content=\"In 1941, Zuse followed his earlier machine up with the Z3, the world's first working electromechanical programmable, fully automatic digital computer.[38][39] The Z3 was built with 2000 relays, implementing a 22 bit word length that operated at a clock frequency of about 5–10 Hz.[40] Program code was supplied on punched film while data could be stored in 64 words of memory or supplied from the keyboard. It was quite similar to modern machines in some respects, pioneering numerous advances such\"),\n",
+       " Document(metadata={'source': 'computer.txt'}, page_content='In 1945, Turing joined the National Physical Laboratory and began work on developing an electronic stored-program digital computer. His 1945 report \"Proposed Electronic Calculator\" was the first specification for such a device. John von Neumann at the University of Pennsylvania also circulated his First Draft of a Report on the EDVAC in 1945.[34]'),\n",
+       " Document(metadata={'source': 'computer.txt'}, page_content='The ENIAC[54] (Electronic Numerical Integrator and Computer) was the first electronic programmable computer built in the U.S. Although the ENIAC was similar to the Colossus, it was much faster, more flexible, and it was Turing-complete. Like the Colossus, a \"program\" on the ENIAC was defined by the states of its patch cables and switches, a far cry from the stored program electronic machines that came later. Once a program was written, it had to be mechanically set into the machine with manual'),\n",
+       " Document(metadata={'source': 'computer.txt'}, page_content='exchange network into an electronic data processing system, using thousands of vacuum tubes.[34] In the US, John Vincent Atanasoff and Clifford E. Berry of Iowa State University developed and tested the Atanasoff–Berry Computer (ABC) in 1942,[45] the first \"automatic electronic digital computer\".[46] This design was also all-electronic and used about 300 vacuum tubes, with capacitors fixed in a mechanically rotating drum for memory.[47]')]"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,6 +141,123 @@
    "source": [
     "Query_Answer = library.similarity_search(Query1)\n",
     "Query_Answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs_n_scores = library.similarity_search_with_score(Query1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(Document(metadata={'source': 'computer.txt'}, page_content=\"In 1941, Zuse followed his earlier machine up with the Z3, the world's first working electromechanical programmable, fully automatic digital computer.[38][39] The Z3 was built with 2000 relays, implementing a 22 bit word length that operated at a clock frequency of about 5–10 Hz.[40] Program code was supplied on punched film while data could be stored in 64 words of memory or supplied from the keyboard. It was quite similar to modern machines in some respects, pioneering numerous advances such\"),\n",
+       "  0.7048075),\n",
+       " (Document(metadata={'source': 'computer.txt'}, page_content='In 1945, Turing joined the National Physical Laboratory and began work on developing an electronic stored-program digital computer. His 1945 report \"Proposed Electronic Calculator\" was the first specification for such a device. John von Neumann at the University of Pennsylvania also circulated his First Draft of a Report on the EDVAC in 1945.[34]'),\n",
+       "  0.721405),\n",
+       " (Document(metadata={'source': 'computer.txt'}, page_content='The ENIAC[54] (Electronic Numerical Integrator and Computer) was the first electronic programmable computer built in the U.S. Although the ENIAC was similar to the Colossus, it was much faster, more flexible, and it was Turing-complete. Like the Colossus, a \"program\" on the ENIAC was defined by the states of its patch cables and switches, a far cry from the stored program electronic machines that came later. Once a program was written, it had to be mechanically set into the machine with manual'),\n",
+       "  0.73912704),\n",
+       " (Document(metadata={'source': 'computer.txt'}, page_content='exchange network into an electronic data processing system, using thousands of vacuum tubes.[34] In the US, John Vincent Atanasoff and Clifford E. Berry of Iowa State University developed and tested the Atanasoff–Berry Computer (ABC) in 1942,[45] the first \"automatic electronic digital computer\".[46] This design was also all-electronic and used about 300 vacuum tubes, with capacitors fixed in a mechanically rotating drum for memory.[47]'),\n",
+       "  0.751117)]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs_n_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever = library.as_retriever()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setting it up with Ollama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ollama\n",
+    "from langchain.chains.question_answering import load_qa_chain\n",
+    "from langchain_ollama.chat_models import ChatOllama\n",
+    "from langchain.embeddings import OllamaEmbeddings\n",
+    "\n",
+    "\n",
+    "llm = ChatOllama(model='llama3.2:latest')\n",
+    "\n",
+    "# Initialize the embeddings model\n",
+    "embeddings = OllamaEmbeddings(model='llama3.2:latest')\n",
+    "\n",
+    "# Create a vector store (e.g., FAISS) with your documents\n",
+    "vectorstore = FAISS.from_texts(texts=texts,embedding = embeddings, metadatas=metadata)\n",
+    "\n",
+    "combine_documents_chain = load_qa_chain(llm=llm, chain_type=\"stuff\")\n",
+    "\n",
+    "# Initialize the RetrievalQA chain\n",
+    "qa = RetrievalQA(combine_documents_chain=combine_documents_chain, retriever=vectorstore.as_retriever())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Query2 = \"whats was the world's first electronic digital programmable computer?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "answer = qa.invoke(Query2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'query': \"whats was the world's first electronic digital programmable computer?\",\n",
+       " 'result': \"I don't know, but according to the context provided, ENIAC (Electronic Numerical Integrator and Computer) is described as a Turing-complete device that performed ballistics trajectory calculations for the United States Army. However, it seems it may not be the world's first electronic digital programmable computer, as that distinction belongs to another computer, Harwell CADET of 1955.\"}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
    ]
   }
  ],
