PymuPDF and faiss working

--- a/faiss.ipynb
+++ b/faiss.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from langchain.embeddings.base import Embeddings\n",
     "from langchain_openai import OpenAI \n",
     "from langchain_community.document_loaders import TextLoader\n",
@@ -30,33 +29,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joao/miniconda3/envs/finetune_llm/lib/python3.10/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
-    "\n",
+    "import numpy  as np\n",
     "class LocalEmbeddings(Embeddings):\n",
     "    def __init__(self, model_name=\"all-MiniLM-L6-v2\"):\n",
     "        self.model = SentenceTransformer(model_name)\n",
+    "        \n",
     "    def embed_documents(self, texts):\n",
-    "        return self.model.encode(texts)\n",
+    "        return np.array(self.model.encode(texts))\n",
+    "    \n",
     "    def embed_query(self, text):\n",
-    "        return self.model.encode([text])[0]"
+    "        return np.array(self.model.encode([text])[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = TextLoader(\"computer.txt\")"
+    "loader = TextLoader(\"Honda_2020.md\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=500,\n",
+    "    chunk_size=100,\n",
     "    chunk_overlap=0,\n",
     "    length_function=len,\n",
     ")"
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joao/miniconda3/envs/finetune_llm/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -112,28 +131,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Query1 = \"whats was the world's first electronic digital programmable computer?\""
+    "Query1 = \"Me explique sobre a linha de Bordo\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'source': 'computer.txt'}, page_content='processing system, using thousands of vacuum tubes.[34] In the US, John Vincent Atanasoff and Clifford E. Berry of Iowa State University developed and tested the Atanasoff–Berry Computer (ABC) in 1942,[45] the first \"automatic electronic digital computer\".[46] This design was also all-electronic and used about 300 vacuum tubes, with capacitors fixed in a mechanically rotating drum for memory.[47]'),\n",
-       " Document(metadata={'source': 'computer.txt'}, page_content='modern electronic computer.[62] As soon as the Baby had demonstrated the feasibility of its design, a project began at the university to develop it into a practically useful computer, the Manchester Mark 1.'),\n",
-       " Document(metadata={'source': 'computer.txt'}, page_content=\"In 1941, Zuse followed his earlier machine up with the Z3, the world's first working electromechanical programmable, fully automatic digital computer.[38][39] The Z3 was built with 2000 relays, implementing a 22 bit word length that operated at a clock frequency of about 5–10 Hz.[40] Program code was supplied on punched film while data could be stored in 64 words of memory or supplied from the keyboard. It was quite similar to modern machines in some respects, pioneering numerous advances such\"),\n",
-       " Document(metadata={'source': 'computer.txt'}, page_content='Laboratory and began work on developing an electronic stored-program digital computer. His 1945 report \"Proposed Electronic Calculator\" was the first specification for such a device. John von Neumann at the University of Pennsylvania also circulated his First Draft of a Report on the EDVAC in 1945.[34]')]"
+       "[Document(metadata={'source': 'Honda_2020.md'}, page_content='**B**'),\n",
+       " Document(metadata={'source': 'Honda_2020.md'}, page_content='com Bluetooth[®].'),\n",
+       " Document(metadata={'source': 'Honda_2020.md'}, page_content='Bluetooth[®]........................................ 9-42\\nInformações Legais do Apple'),\n",
+       " Document(metadata={'source': 'Honda_2020.md'}, page_content='iPod[®].\\n\\nnovamente)')]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,23 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(Document(metadata={'source': 'computer.txt'}, page_content='processing system, using thousands of vacuum tubes.[34] In the US, John Vincent Atanasoff and Clifford E. Berry of Iowa State University developed and tested the Atanasoff–Berry Computer (ABC) in 1942,[45] the first \"automatic electronic digital computer\".[46] This design was also all-electronic and used about 300 vacuum tubes, with capacitors fixed in a mechanically rotating drum for memory.[47]'),\n",
-       "  0.61609745),\n",
-       " (Document(metadata={'source': 'computer.txt'}, page_content='modern electronic computer.[62] As soon as the Baby had demonstrated the feasibility of its design, a project began at the university to develop it into a practically useful computer, the Manchester Mark 1.'),\n",
-       "  0.65563977),\n",
-       " (Document(metadata={'source': 'computer.txt'}, page_content=\"In 1941, Zuse followed his earlier machine up with the Z3, the world's first working electromechanical programmable, fully automatic digital computer.[38][39] The Z3 was built with 2000 relays, implementing a 22 bit word length that operated at a clock frequency of about 5–10 Hz.[40] Program code was supplied on punched film while data could be stored in 64 words of memory or supplied from the keyboard. It was quite similar to modern machines in some respects, pioneering numerous advances such\"),\n",
-       "  0.7048075),\n",
-       " (Document(metadata={'source': 'computer.txt'}, page_content='Laboratory and began work on developing an electronic stored-program digital computer. His 1945 report \"Proposed Electronic Calculator\" was the first specification for such a device. John von Neumann at the University of Pennsylvania also circulated his First Draft of a Report on the EDVAC in 1945.[34]'),\n",
-       "  0.7072707)]"
+       "[(Document(metadata={'source': 'Honda_2020.md'}, page_content='**B**'),\n",
+       "  1.305159),\n",
+       " (Document(metadata={'source': 'Honda_2020.md'}, page_content='com Bluetooth[®].'),\n",
+       "  1.3274362),\n",
+       " (Document(metadata={'source': 'Honda_2020.md'}, page_content='Bluetooth[®]........................................ 9-42\\nInformações Legais do Apple'),\n",
+       "  1.3391099),\n",
+       " (Document(metadata={'source': 'Honda_2020.md'}, page_content='iPod[®].\\n\\nnovamente)'),\n",
+       "  1.4186926)]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,33 +216,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1056106/1214122809.py:9: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaEmbeddings``.\n",
+      "  embeddings = OllamaEmbeddings(model='llama3.2:latest')\n",
+      "/tmp/ipykernel_1056106/1214122809.py:11: LangChainDeprecationWarning: This class is deprecated. See the following migration guides for replacements based on `chain_type`:\n",
+      "stuff: https://python.langchain.com/docs/versions/migrating_chains/stuff_docs_chain\n",
+      "map_reduce: https://python.langchain.com/docs/versions/migrating_chains/map_reduce_chain\n",
+      "refine: https://python.langchain.com/docs/versions/migrating_chains/refine_chain\n",
+      "map_rerank: https://python.langchain.com/docs/versions/migrating_chains/map_rerank_docs_chain\n",
+      "\n",
+      "See also guides on retrieval and question-answering here: https://python.langchain.com/docs/how_to/#qa-with-rag\n",
+      "  combine_documents_chain = load_qa_chain(llm=llm, chain_type=\"stuff\")\n",
+      "/tmp/ipykernel_1056106/1214122809.py:14: LangChainDeprecationWarning: This class is deprecated. Use the `create_retrieval_chain` constructor instead. See migration guide here: https://python.langchain.com/docs/versions/migrating_chains/retrieval_qa/\n",
+      "  qa = RetrievalQA(combine_documents_chain=combine_documents_chain, retriever=library.as_retriever())\n"
+     ]
+    }
+   ],
    "source": [
     "import ollama\n",
     "from langchain.chains.question_answering import load_qa_chain\n",
     "from langchain_ollama.chat_models import ChatOllama\n",
     "from langchain.embeddings import OllamaEmbeddings\n",
     "\n",
-    "\n",
     "llm = ChatOllama(model='llama3.2:latest')\n",
     "\n",
     "# Initialize the embeddings model\n",
     "embeddings = OllamaEmbeddings(model='llama3.2:latest')\n",
     "\n",
-    "# Create a vector store (e.g., FAISS) with your documents\n",
-    "vectorstore = FAISS.from_texts(texts=texts,embedding = embeddings, metadatas=metadata)\n",
-    "\n",
     "combine_documents_chain = load_qa_chain(llm=llm, chain_type=\"stuff\")\n",
     "\n",
     "# Initialize the RetrievalQA chain\n",
-    "qa = RetrievalQA(combine_documents_chain=combine_documents_chain, retriever=vectorstore.as_retriever())"
+    "qa = RetrievalQA(combine_documents_chain=combine_documents_chain, retriever=library.as_retriever())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,26 +266,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "answer = qa.invoke(Query2)"
+    "answer = qa.invoke(Query1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'query': \"whats was the world's first electronic digital programmable computer?\",\n",
-       " 'result': \"The EDVAC (Electronic Discrete Variable Automatic Computer), designed by John Mauchly and J. Presper Eckert at the University of Pennsylvania, is often considered to be the world's first electronic digital programmable computer. It was completed in 1945 and built upon earlier work on the development of an electronic stored-program digital computer.\"}"
+       " 'result': \"I don't know, but I can tell you that Charles Babbage is often credited with designing the first mechanical computer, the Difference Engine and Analytical Engine, in the early 19th century. \\n\\nHowever, some historians argue that the Colossus machine, built in 1943 during World War II at Bletchley Park, was a precursor to modern electronic computers, as it was used for code-breaking purposes.\\n\\nThe first electronic digital programmable computer is generally considered to be ENIAC (Electronic Numerical Integrator and Computer), which was completed in 1946 by John Mauchly and J. Presper Eckert at the University of Pennsylvania.\"}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "local_rag",
+   "display_name": "finetune_llm",
    "language": "python",
    "name": "python3"
   },
